--- a/docs/index.css
+++ b/docs/index.css
@@ -16,22 +16,18 @@ a {
 header {
     background-color: teal;
     padding: 0 3.5% 0 7%;
-    height: 60px;
+    height: 4em;
 }
 
 h1 {
     color: white;
     display: inline;
-    margin: 1em 50% 0 0.5%;
+    margin: 1em 43vw 0 0.4%;
     position: relative;
-    bottom: 0.2em;
+    bottom: 0.4em;
     right: 1%;
 }
 
-/* header h1, header > img {
-    position: relative;
-    bottom: 0.5em;
-} */
 
 h1 span {
     opacity: 0.5;
@@ -46,6 +42,7 @@ sup, sub {
 sub {
     position: relative;
     right: 4px;
+    bottom: 1em;
 }
 
 sup {
@@ -55,14 +52,14 @@ sup {
 }
 
 .logo {
-    margin: 0.12em 0.2em 0 ; 
+    margin: 0.12em 0.1em 0 ; 
     position: relative;
-    top: 0.5em;
+    bottom: 0.1em;
     height: 3em;
 }
 
 .get {
-    padding: 0.8em;
+    padding: 0.5em 0;
 }
 
 
@@ -72,17 +69,22 @@ a:hover {
 }
 /*header*/
 
-
 /*navigation*/
+#hidden {
+    display: none;
+}
+
 nav {
     background-color: #fff;
-    height: 22px;
+    height: 1.4em;
+    margin: 0.2em -3.4vw 0.4em -7vw;
+    padding-left: 7vw;
     border-bottom: 3px solid silver;
     /* padding: 5px 5px 0 20px; */
 }
 
 nav span {
-    margin: 0 28% 0 80px;
+    margin: 0 28% 0 0;
     text-align: justify;
 }
 
@@ -98,8 +100,11 @@ nav sub {
 
 
 /*main*/
+main {
+    min-width: 600px;
+}
 .parent {
-    margin: 20px 100px 20px 100px;
+    margin: 7vh 100px 2em 100px;
     display: flex;
 }
 
@@ -147,8 +152,9 @@ ul a {
 
 
 li {
-    position: absolute;
-    left: 160px;
+    position: relative;
+    top: -2.3em;
+    left: 3.5em;
 }
 
 #one {
@@ -209,3 +215,86 @@ footer {
     text-align: right;
 }
 /*footer*/
+
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+    header {
+        padding: 0.5em 7% 0 7%;
+        height: 4em;
+    }
+
+    h1 {
+        display: inline-block;
+        margin: 1em 0 0 0.4%;
+        position: relative;
+        bottom: 0.5em;
+        right: 1%;
+    }
+
+    .get {
+        float: right;
+        margin-right: 2em;
+    }
+
+    #hidden {
+        display: inline;
+    }
+
+    nav {
+        text-align: center;
+        margin: 0.2em 0 0.4em 0;
+        padding-left: 0;
+        border-bottom: 3px solid silver;
+    }
+
+    nav span {
+        display: none;
+    }
+
+    nav a {
+        margin-right: 1em;
+    }
+
+    .parent {
+        display: block;
+    }
+
+    h2, h3 {
+        text-align: center;
+    }
+
+    
+    .left {
+        min-width: 50%;
+        text-align: justify;
+        padding-right: 0;
+        margin-right: 0;
+        line-height: 1.4;
+    }
+
+    .left p {
+        display: inline-block;
+    }
+    
+    /* .left img {
+        display: inline-block;
+    } */
+    
+
+    
+    .left h3 {
+        margin-top: 0.1em;
+    }
+    
+
+    
+    .screen {
+        display: block;
+        margin: 5px 0 0 188px;
+        text-align: end;
+    }
+    
+
+
+
+
+}
